增加通知功能，修复一些问题

--- a/UpdateSystem/index.html
+++ b/UpdateSystem/index.html
@@ -17,8 +17,15 @@
 		<li>
 			<span class="label label-important">NEW</span>
 			<span class="label label-info">1.2</span>
+			<span class="label label-success">006</span>
+			<span class="label">2012-08-09</span>
+			添加了下载完成后通知的功能，修复一些问题
+		</li>	
+		<li>
+			<span class="label label-important">NEW</span>
+			<span class="label label-info">1.2</span>
 			<span class="label label-success">001</span>
-			<span class="label">2012-07-30</span>
+			<span class="label">2012-08-06</span>
 			修正了删除键和刷新键中的问题
 		</li>			
 		<li>
